@@ -1,3 +1,9 @@
+2007-03-19  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plparse/totem-disc.c: (totem_resolve_symlink): remove
+	home-made canonicalise function, helps Win32 support
+	(Helps: #342926)
+
 2007-03-18  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
